gallery portfolio added

--- a/gallery.html
+++ b/gallery.html
@@ -118,7 +118,7 @@
                       <div id="portfolio-fancy-7c965475e86778586eb3f5c5f5821836" class="sh-portfolio-fancy sh-portfolio-fancy-columns3">
                         <div class="sh-portfolio-fancy-item category-art category-commercial" id="portfolio-45">
                           <div class="sh-portfolio-fancy-itemc-container">
-                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_1.JPG"
+                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_1.jpg"
                               alt="" />
                             <a href="project/frame-with-logo/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
@@ -146,7 +146,7 @@
                         </div>
                         <div class="sh-portfolio-fancy-item category-misc category-photography" id="portfolio-43">
                           <div class="sh-portfolio-fancy-itemc-container">
-                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_3.JPG"
+                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_3.jpg"
                               alt="" />
                             <a href="project/beautiful-landscape/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
@@ -188,7 +188,7 @@
                         </div>
                         <div class="sh-portfolio-fancy-item category-misc category-photography" id="portfolio-37">
                           <div class="sh-portfolio-fancy-itemc-container">
-                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_6.JPG"
+                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_6.jpg"
                               alt="" />
                             <a href="project/snowy-mountain-trip/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
@@ -202,7 +202,7 @@
                         </div>
                         <div class="sh-portfolio-fancy-item category-commercial category-design" id="portfolio-36">
                           <div class="sh-portfolio-fancy-itemc-container">
-                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_7.JPG"
+                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_7.jpg"
                               alt="" />
                             <a href="project/website-mock-up-with-tool-tip/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
@@ -216,7 +216,7 @@
                         </div>
                         <div class="sh-portfolio-fancy-item category-design category-tech" id="portfolio-35">
                           <div class="sh-portfolio-fancy-itemc-container">
-                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_8.JPG"
+                            <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_8.jpg"
                               alt="" />
                             <a href="project/clean-workspace-coffee/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
