gallery portfolio added

--- a/gallery.html
+++ b/gallery.html
@@ -120,10 +120,10 @@
                           <div class="sh-portfolio-fancy-itemc-container">
                             <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_1.jpg"
                               alt="" />
-                            <a href="project/frame-with-logo/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
+                            <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
                               <div class="sh-portfolio-fancy-item-overlay-container">
-                                <a href="project/frame-with-logo/index.html" class="sh-portfolio-fancy-item-overlay-title">
+                                <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-title">
                                   <h3>A foodie!!!</h3>
                                 </a>
                               </div>
@@ -134,10 +134,10 @@
                           <div class="sh-portfolio-fancy-itemc-container">
                             <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_2.JPG"
                               alt="" />
-                            <a href="project/gray-bag-mock-up/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
+                            <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
                               <div class="sh-portfolio-fancy-item-overlay-container">
-                                <a href="project/gray-bag-mock-up/index.html" class="sh-portfolio-fancy-item-overlay-title">
+                                <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-title">
                                   <h3>An enthusiastic developer!!!</h3>
                                 </a>
                               </div>
@@ -148,10 +148,10 @@
                           <div class="sh-portfolio-fancy-itemc-container">
                             <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_3.jpg"
                               alt="" />
-                            <a href="project/beautiful-landscape/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
+                            <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
                               <div class="sh-portfolio-fancy-item-overlay-container">
-                                <a href="project/beautiful-landscape/index.html" class="sh-portfolio-fancy-item-overlay-title">
+                                <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-title">
                                   <h3>Planning for moving abroad</h3>
                                 </a>
                               </div>
@@ -162,10 +162,10 @@
                           <div class="sh-portfolio-fancy-itemc-container">
                             <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_4.JPG"
                               alt="" />
-                            <a href="project/sketch-book/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
+                            <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
                               <div class="sh-portfolio-fancy-item-overlay-container">
-                                <a href="project/sketch-book/index.html" class="sh-portfolio-fancy-item-overlay-title">
+                                <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-title">
                                   <h3>Sketch Book</h3>
                                 </a>
                               </div>
@@ -176,10 +176,10 @@
                           <div class="sh-portfolio-fancy-itemc-container">
                             <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_5.JPG"
                               alt="" />
-                            <a href="project/book-cover-design/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
+                            <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
                               <div class="sh-portfolio-fancy-item-overlay-container">
-                                <a href="project/book-cover-design/index.html" class="sh-portfolio-fancy-item-overlay-title">
+                                <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-title">
                                   <h3>Book Cover Design</h3>
                                 </a>
                               </div>
@@ -190,10 +190,10 @@
                           <div class="sh-portfolio-fancy-itemc-container">
                             <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_6.jpg"
                               alt="" />
-                            <a href="project/snowy-mountain-trip/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
+                            <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
                               <div class="sh-portfolio-fancy-item-overlay-container">
-                                <a href="project/snowy-mountain-trip/index.html" class="sh-portfolio-fancy-item-overlay-title">
+                                <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-title">
                                   <h3>Snowy Mountain Trip</h3>
                                 </a>
                               </div>
@@ -204,10 +204,10 @@
                           <div class="sh-portfolio-fancy-itemc-container">
                             <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_7.jpg"
                               alt="" />
-                            <a href="project/website-mock-up-with-tool-tip/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
+                            <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
                               <div class="sh-portfolio-fancy-item-overlay-container">
-                                <a href="project/website-mock-up-with-tool-tip/index.html" class="sh-portfolio-fancy-item-overlay-title">
+                                <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-title">
                                   <h3>Website Mock-up With Tool-tip</h3>
                                 </a>
                               </div>
@@ -218,10 +218,10 @@
                           <div class="sh-portfolio-fancy-itemc-container">
                             <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_8.jpg"
                               alt="" />
-                            <a href="project/clean-workspace-coffee/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
+                            <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
                               <div class="sh-portfolio-fancy-item-overlay-container">
-                                <a href="project/clean-workspace-coffee/index.html" class="sh-portfolio-fancy-item-overlay-title">
+                                <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-title">
                                   <h3>Clean Workspace + Coffee</h3>
                                 </a>
                               </div>
@@ -232,10 +232,10 @@
                           <div class="sh-portfolio-fancy-itemc-container">
                             <img class="sh-portfolio-img" src="./gallery-assets/img/IMG_9.jpeg"
                               alt="" />
-                            <a href="project/website-mock-up-blue-background/index.html" class="sh-portfolio-fancy-item-overlay-bg"></a>
+                            <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-bg"></a>
                             <div class="sh-portfolio-fancy-item-overlay">
                               <div class="sh-portfolio-fancy-item-overlay-container">
-                                <a href="project/website-mock-up-blue-background/index.html" class="sh-portfolio-fancy-item-overlay-title">
+                                <a href="javascript:void(0);" class="sh-portfolio-fancy-item-overlay-title">
                                   <h3>Website Mock-up Blue Background</h3>
                                 </a>
                               </div>
