--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <ul class="list-inline">
                     <li class="email list-inline-item"><i class="fa fa-envelope"></i><a href="mailto:contact.rahul1991@gmail.com">contact.rahul1991@gmail.com</a></li>
                     <li class="list-inline-item"><i class="fa fa-phone"></i> <a href="tel: 0123456789">+91 8130319862</a></li>
-                    <li class="website list-inline-item"><i class="fa fa-globe"></i><a href="#" target="_blank">rahulsingh.tech</a></li>
+                    <li class="website list-inline-item"><i class="fa fa-globe"></i><a href="#" target="_blank">therahulsingh.com</a></li>
                 </ul>
             </div><!--//container-->
         </div><!--//contact-info-->
