--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="top-bar container-fluid">
             <div class="actions">
                 <!-- <a class="btn d-none d-md-inline-block" href="mailto:contact.rahul1991@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me</a> -->
-                <a class="btn" href="#"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
+                <!-- <a class="btn" href="#"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a> -->
             </div><!--//actions-->
             <ul class="social list-inline">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/rahulsingh91/" target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
@@ -239,12 +239,12 @@
                     <div class="item col-12 col-md-4">
                         <div class="item-inner">
                             <div class="chart-easy-pie text-center">
-                                <div class="chart-theme-1 chart" data-percent="85"><span>85</span>%</div>
+                                <div class="chart-theme-1 chart" data-percent="85"><span>90</span>%</div>
                             </div>
                             <h4 class="skill-name">JavaScript</h4>
-                            <div class="level">Good Grasp, +5 years</div>
+                            <div class="level">Good Grasp, 6+ years</div>
                             <div class="desc">
-                                Profound knowledge on JavaScript, hence i claimed myself as "Enthusiastic" JavaScript Developer. Created sample polyfills, jQuery plugin,  
+                                Profound knowledge on JavaScript, hence i claimed myself as "Enthusiastic" JavaScript Developer. Created numberous POC for the firm.   
                             </div>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -254,7 +254,7 @@
                                 <div class="chart-theme-1 chart" data-percent="80"><span>80</span>%</div>
                             </div>
                             <h4 class="skill-name">Angular Series</h4>
-                            <div class="level">Clear Foundation, 3 years</div>
+                            <div class="level">Clear Foundation, 4 years</div>
                             <div class="desc">
                                 Good working understanding of latest angular project with modular setup and clean architecture build-up.
                             </div>
@@ -266,7 +266,7 @@
                                 <div class="chart-theme-1 chart" data-percent="85"><span>85</span>%</div>
                             </div>
                             <h4 class="skill-name">Ionic 3</h4>
-                            <div class="level">Hands-on, 1 years</div>
+                            <div class="level">Hands-on, 2 years</div>
                             <div class="desc">
                                 Good working understanding of Ionic 3 and Cordova libraries for iOS and Android app development.
                             </div>
@@ -280,7 +280,7 @@
                                 <div class="chart-theme-1 chart" data-percent="75"><span>75</span>%</div>
                             </div>
                             <h4 class="skill-name">Node/ExpressJS</h4>
-                            <div class="level">Good Understanding, 1.5 years</div>
+                            <div class="level">Good Command, 3 years</div>
                             <div class="desc">
                                 Have good work understaging of Node/ExpressJS APIs development for different platforms.
                             </div>
@@ -291,10 +291,10 @@
                             <div class="chart-easy-pie text-center">
                                 <div class="chart-theme-1 chart" data-percent="75"><span>75</span>%</div>
                             </div>
-                            <h4 class="skill-name">SQL Technologies</h4>
-                            <div class="level">Average, 8 years</div>
+                            <h4 class="skill-name">VueJs/ReactJs</h4>
+                            <div class="level">Average, 2.5 years</div>
                             <div class="desc">
-                                Good hands-on with SQL usage with node applications.  
+                                Good than average!  
                             </div>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -310,7 +310,9 @@
                     <span class="skill-tag">KnockoutJS</span>
                     <span class="skill-tag">BackboneJS</span>
                     <span class="skill-tag">VueJS</span>
+                    <span class="skill-tag">ReactJS</span>
                     <br>
+                    <span class="skill-tag">NodeJS</span>
                     <span class="skill-tag">Firebase</span>
                     <span class="skill-tag">Jexia</span>
                     <span class="skill-tag">SVN</span>
@@ -382,11 +384,11 @@
             <div class="intro">
                 <img class="d-none d-md-block img-circle1" src="assets/images/profile-image.png" alt="">
                 <div class="dialog">
-                    <p>I'm currently working with a IT firm based in Gurgaon, India. I am open towards new technologies and open source community. I like establising a well structure code which meets clients requirement.</p>
+                    <p>I'm currently working in an IT firm (based in Gurgaon, India). I am open towards new challenges and technologies. I do spend some of my time to support open source community. Sometime back, I was very much active in emberJs community. </p>
                     <p><strong>I can help with the following:</strong></p>
                     <ul class="list-unstyled service-list">
-                        <li><i class="fa fa-check" aria-hidden="true"></i> App development with Ionic</li>
-                        <li><i class="fa fa-check" aria-hidden="true"></i> Front-end development with Angular 4/5</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i> App development with Ionic(latest)</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i> Front-end development with Angular(latest), ReactJs, VueJs </li>
                         <li><i class="fa fa-check" aria-hidden="true"></i> Back-end development with Node/ExpressJS</li>
                         <li><i class="fa fa-check" aria-hidden="true"></i> Support for community people accross the globe</li>
                     </ul>
