--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="time">Jul,2013 - May,2015</div>
                     </div><!--//job-meta-->
                     <div class="job-desc">
-                        <p>The application was designed for a client to manage their banking firms( Can, CommonWealth, ANZ, etc ). The application was designed using <strong>HTML5</strong> and <strong>Bootstrap 3</strong>. Frontend frameworks used like RequireJS, BackboneJS, KnockoutJS, UnderscoreJS. Backend was built on C#. the application comprised of managing of tasks under project, status of tasks, from assignment of tasks to reviewing of tasks. There was also an admin panel to allow roles and project setup. The application allowed role managers to review process and submit budget processes and analyze individual tasks.</p>
+                        <p>The application was designed for a client to manage their banking firms( Can, CommonWealth, ANZ, etc ). The application was designed using <strong>HTML5</strong> and <strong>Bootstrap 3</strong>. Frontend frameworks used like RequireJS, BackboneJS, KnockoutJS, UnderscoreJS. Backend was built on .net services. The application comprised of creation & allocation of different tasks, maintain status of tasks & assigment of tasks for reviewing to higher authorities. It also included an admin panel to create project & allocate to corresponding members. The application allowed role managers to review process, submit budget processes and analyze individual tasks.</p>
                         <p><strong>Frontend Development</strong> using rich use of <strong>BackboneJS</strong> &amp; <strong>KnockoutJS</strong>. Various other libraries were used like <strong>Select2</strong>, <strong>Underscore</strong>, <strong>Integrated Server Sent Events</strong> to mark auto update. Developed a complete rich post and comment page(like Facebook) for internal users of the application. A budget was designed which showed current updates and a report analyzer.</p> 
                     </div><!--//job-desc-->
                 </div><!--//item-->
@@ -178,7 +178,7 @@
                         <div class="time">Mar,2013 - Jun,2013</div>
                     </div><!--//job-meta-->
                     <div class="job-desc">
-                        <p>Started my web development career with an interactive application using HTML5(CANVAS) standards and jQuery library to create 2 types of application with multilingual feature and audio support. The application was specifically designed for children below 5 years. Some core functionalities comprised of drag and dropping of selective text to specific places (Fill in the blanks) and matching of two similar categories using click(Match the following). The configurations and text were completely read from a configurable JSON file.</p> 
+                        <p>Started my web development career with an interactive application using HTML5(CANVAS) standards and jQuery library to create an application with multilingual feature and audio support. The application was specifically designed for children below 5 years. Some of the core functionalities comprised of drag and drop(Fill in the blanks) and match the following using click. The configurations and text were completely read from a configurable JSON file.</p> 
                         <p><strong>Frontend Development</strong> using rich use of <strong>HTML5&ltCANVAS&gt</strong> and <strong>jQuery</strong>. </p> 
                     </div><!--//job-desc-->
                 </div><!--//item-->
