--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                         <div class="time">Mar,2013 - Jun,2013</div>
                     </div><!--//job-meta-->
                     <div class="job-desc">
-                        <p>Started my web development career with an interactive application using HTML5(CANVAS) standards and jQuery library to create an application with multilingual feature and audio support. The application was specifically designed for children below 5 years. Some of the core functionalities comprised of drag and drop(Fill in the blanks) and match the following using click. The configurations and text were completely read from a configurable JSON file.</p> 
-                        <p><strong>Frontend Development</strong> using rich use of <strong>HTML5&ltCANVAS&gt</strong> and <strong>jQuery</strong>. </p> 
+                        <p>Started my web development career by building an interactive application using HTML5(CANVAS) and jQuery. It was specifically designed for children below 5 years. It supported multilingual feature and audio options. Some of the core functionalities comprised of drag and drop(Fill in the blanks) and match the following using clicks. The configurations and text were completely read from a configurable JSON file</p> 
+                        <p><strong>Frontend Development</strong> using <strong>HTML5&ltCANVAS&gt</strong> and <strong>jQuery</strong>. </p> 
                     </div><!--//job-desc-->
                 </div><!--//item-->
                 
