--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                 <div class="item">
                     <div class="work-place">
-                        <h3 class="place"><strong>WEBRTC | Trial Application</strong></h3>
+                        <h3 class="place"><strong>WEBRTC | POC Application</strong></h3>
                         <div class="location"><i class="fa fa-map-marker" aria-hidden="true"></i>Gurgaon, India</div>
                     </div>
                     <div class="job-meta">
@@ -148,8 +148,8 @@
                         <div class="time">Jul, 2014 - Aug, 2014</div>
                     </div><!--//job-meta-->
                     <div class="job-desc">
-                        <p>A small demo was developed using standards of <strong>WEBRTC</strong> and supportive browser support. <strong>SimpleWEBRTC library</strong> was used to create application that enabled audio, video calling as well sending of small text file. Googles STUN server was used to channel data and to establish connection between two parties.</p>
-                        <p><strong>Frontend Development</strong> <strong>HTML5</strong>, <strong>WEBRTC</strong> and <strong>jQuery</strong>. </p> 
+                        <p>A demo application was developed using standards of <strong>WEBRTC</strong> and supportive browser features. <strong>SimpleWEBRTC library</strong> was used to create application that enabled audio, video calling as well as send of small simple file. Googles STUN server was used to channel data and to establish connection between two parties.</p>
+<p><strong>Frontend Development</strong> <strong>HTML5</strong>, <strong>WEBRTC</strong> and <strong>jQuery</strong>. </p> 
                     </div><!--//job-desc-->
                 </div><!--//item-->
 
