new changes added

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     </div><!--//item-->
                 </div><!--//row-->
                 <div class="row">
-                    <div class="item col-6 col-md-6">
+                    <div class="item col-12 col-md-4">
                         <div class="item-inner">
                             <div class="chart-easy-pie text-center">
                                 <div class="chart-theme-1 chart" data-percent="75"><span>75</span>%</div>
@@ -286,7 +286,7 @@
                             </div>
                         </div><!--//item-inner-->
                     </div><!--//item-->
-                    <div class="item col-6 col-md-6">
+                    <div class="item col-12 col-md-4">
                         <div class="item-inner">
                             <div class="chart-easy-pie text-center">
                                 <div class="chart-theme-1 chart" data-percent="75"><span>75</span>%</div>
@@ -295,6 +295,18 @@
                             <div class="level">Average, 2.5 years</div>
                             <div class="desc">
                                 Good than average!  
+                            </div>
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="item col-12 col-md-4">
+                        <div class="item-inner">
+                            <div class="chart-easy-pie text-center">
+                                <div class="chart-theme-1 chart" data-percent="75"><span>60</span>%</div>
+                            </div>
+                            <h4 class="skill-name">Ruby on Rails</h4>
+                            <div class="level">Average, 2 years</div>
+                            <div class="desc">
+                                Average!  
                             </div>
                         </div><!--//item-inner-->
                     </div><!--//item-->
