--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div class="intro">
                 <img class="d-none d-md-block img-circle1" src="assets/images/profile-image.png" alt="">
                 <div class="dialog">
-                    <p>I'm currently working in GetVokl LLC, USA. I do operate my own firm <a href="https://codork.com">CODORK (OPC) Pvt Ltd</a>a> I am open towards new challenges and technologies. I do spend some of my time to support open source community </p>
+                    <p>I'm currently working in GetVokl LLC, USA. I do operate my own firm <a href="https://codork.com">CODORK (OPC) Pvt Ltd</a> I am open towards new challenges and technologies. I do spend some of my time to support open source community </p>
                     <p><strong>I can help with the following:</strong></p>
                     <ul class="list-unstyled service-list">
                         <li><i class="fa fa-check" aria-hidden="true"></i> Web App development</li>
