--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Stack Developer / Engineering Manager / WebRTC Consultant">
+    <meta name="description" content="Stack Developer / Engineering Manager / WebRTC Consultant / SFU / MEDIASOUP">
     <meta name="author" content="Rahul Singh">    
     <link rel="shortcut icon" href="favicon.ico">  
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -279,7 +279,7 @@
             <div class="intro">
                 <img class="d-none d-md-block img-circle1" src="assets/images/profile-image.png" alt="">
                 <div class="dialog">
-                    <p>I'm currently working in GetVokl LLC, USA. I do operate my own firm <a href="https://codork.com">CODORK (OPC) Pvt Ltd</a> I am open towards new challenges and technologies. I do spend some of my time to support open source community </p>
+                    <p>I'm currently working in <a href="https://about.getvokl.com/">GetVokl LLC, USA</a> .I do operate my own firm <a href="https://codork.com">CODORK (OPC) Pvt Ltd</a> I am open towards new challenges and technologies. I do spend some of my time to support open source community </p>
                     <p><strong>I can help with the following:</strong></p>
                     <ul class="list-unstyled service-list">
                         <li><i class="fa fa-check" aria-hidden="true"></i> Web App development</li>
