--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <h1 class="name">Rahul Singh</h1>
                 <div class="title">Stack Developer / Engineering Manager / WebRTC Consultant</div>
                 <div class="profile">
-                    <p>Software Engineer with thorough hands-on experience in all levels of development, including project analysis, designing architecture, development, developer end testing and deployment. Supportive and enthusiastic team player dedicated to streamlining processes and efficient resolving project issues. Willing to take ownership of core components.</p>
-                </div><!--//profile-->
+                    <p></p>
+                </div>
             </div><!--//container-->
         </div><!--//intro-->
         
@@ -72,90 +72,43 @@
     <div class="wrapper container">                
         <section id="skills-section" class="skills-section section text-center">
             <h2 class="section-title">Professional Skills</h2>
-            <div class="top-skills">
-                <h3 class="subtitle">Top Skills</h3>
-                <div class="row">
-                    <div class="item col-12 col-md-4">
-                        <div class="item-inner">
-                            <div class="chart-easy-pie text-center">
-                                <div class="chart-theme-1 chart" data-percent="85"><span>90</span>%</div>
-                            </div>
-                            <h4 class="skill-name">WebRTC</h4>
-                            <div class="level"></div>
-                            <div class="desc"></div>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item col-12 col-md-4">
-                        <div class="item-inner">
-                            <div class="chart-easy-pie text-center">
-                                <div class="chart-theme-1 chart" data-percent="80"><span>80</span>%</div>
-                            </div>
-                            <h4 class="skill-name">SFU</h4>
-                            <div class="level"></div>
-                            <div class="desc"></div>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item col-12 col-md-4">
-                        <div class="item-inner">
-                            <div class="chart-easy-pie text-center">
-                                <div class="chart-theme-1 chart" data-percent="85"><span>85</span>%</div>
-                            </div>
-                            <h4 class="skill-name">ReactJs</h4>
-                            <div class="level"></div>
-                            <div class="desc"></div>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                </div><!--//row-->
-                <div class="row">
-                    <div class="item col-12 col-md-4">
-                        <div class="item-inner">
-                            <div class="chart-easy-pie text-center">
-                                <div class="chart-theme-1 chart" data-percent="75"><span>75</span>%</div>
-                            </div>
-                            <h4 class="skill-name">NodeJs / NestJs</h4>
-                            <div class="level"></div>
-                            <div class="desc"></div>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item col-12 col-md-4">
-                        <div class="item-inner">
-                            <div class="chart-easy-pie text-center">
-                                <div class="chart-theme-1 chart" data-percent="75"><span>75</span>%</div>
-                            </div>
-                            <h4 class="skill-name">Angular</h4>
-                            <div class="level"></div>
-                            <div class="desc"></div>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item col-12 col-md-4">
-                        <div class="item-inner">
-                            <div class="chart-easy-pie text-center">
-                                <div class="chart-theme-1 chart" data-percent="75"><span>60</span>%</div>
-                            </div>
-                            <h4 class="skill-name">GoLang</h4>
-                            <div class="level"></div>
-                            <div class="desc"></div>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                </div><!--//row-->
-            </div><!--//top-skills-->
             
             <div class="other-skills">
-                <h3 class="subtitle">Other Skills</h3>
+                <!-- <h3 class="subtitle">Top Skills</h3> -->
                 <div class="misc-skills">
                     <span class="skill-tag">HTML5</span>
-                    <span class="skill-tag">ExpressJS</span>
-                    <span class="skill-tag">EmberJS</span>
+                    <span class="skill-tag">Javascript</span>
+                    <span class="skill-tag">TypeScript</span>
+                    <span class="skill-tag">jQuery</span>
                     <span class="skill-tag">KnockoutJS</span>
                     <span class="skill-tag">BackboneJS</span>
-                    <span class="skill-tag">VueJS</span>
-                    <span class="skill-tag">ReactJS</span>
+                    <span class="skill-tag">EmberJS</span>
+                    <span class="skill-tag">Angular.js</span>
+                    <span class="skill-tag">Vue</span>
                     <br>
-                    <span class="skill-tag">NestJS</span>
+                    <span class="skill-tag">NodeJs</span>
+                    <span class="skill-tag">ExpressJS</span>
+                    <span class="skill-tag">NestJs</span>
+                    <span class="skill-tag">Angular</span>
+                    <span class="skill-tag">React</span>
+                    <span class="skill-tag">NextJs</span>
+                    <span class="skill-tag">VueJS</span>
+                    <br>
                     <span class="skill-tag">Firebase</span>
+                    <span class="skill-tag">WebRTC</span>
                     <span class="skill-tag">SFU</span>
+                    <span class="skill-tag">Google Functions</span>
+                    <span class="skill-tag">Lambda Functions</span>
+                    <span class="skill-tag">AWS</span>
+                    <span class="skill-tag">EC2</span>
+                    <span class="skill-tag">S3</span>
+                    <br>
+                    <span class="skill-tag">Docker</span>
+                    <span class="skill-tag">Kubernetes</span>
+                    <span class="skill-tag">Golang</span>
+                    <span class="skill-tag">Web 3.0</span>
+                    <span class="skill-tag">Ethereum</span>
                     <span class="skill-tag">Git</span>
-                    <span class="skill-tag">Bitbucket</span>
                     <span class="skill-tag">JIRA</span>
                 </div>
             </div><!--//other-skills-->
